--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -2,16 +2,16 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
+
+
+
 body {
+
+  --color-primary: #22272e;
   position: relative;
   color: white;
   height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
+  background: var(--color-primary);
   font-family: sans-serif;
   overflow-y: hidden;
   display: flex;
@@ -52,6 +52,13 @@ a {
 a:hover {
   opacity: 1;
   text-decoration: none;
+}
+
+.Title {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 20px 0;
+  text-align: center;
 }
 
 .Hello {
