--- a/src/app/custom.css
+++ b/src/app/custom.css
@@ -1,37 +1,36 @@
 :root {
-  --primary-900: #044E54;
-  --primary-800: #0A6C74;
-  --primary-700: #14919B;
-  --primary-600: #14919B;
-  --primary-500: #2CB1BC;
-  --primary-400: #38BEC9;
-  --primary-300: #54D1DB;
-  --primary-200: #87EAF2;
-  --primary-100: #BEF8FD;
-  --primary-50: #E0FCFF;
+  --primary-900: #044e54;
+  --primary-800: #0a6c74;
+  --primary-700: #14919b;
+  --primary-600: #14919b;
+  --primary-500: #2cb1bc;
+  --primary-400: #38bec9;
+  --primary-300: #54d1db;
+  --primary-200: #87eaf2;
+  --primary-100: #bef8fd;
+  --primary-50: #e0fcff;
 
-  --neutral-900: #102A43;
-  --neutral-800: #243B53;
-  --neutral-700: #334E68;
+  --neutral-900: #102a43;
+  --neutral-800: #243b53;
+  --neutral-700: #334e68;
   --neutral-600: #486581;
-  --neutral-500: #627D98;
-  --neutral-400: #829AB1;
-  --neutral-300: #9FB3C8;
-  --neutral-200: #BCCCDC;
-  --neutral-100: #D9E2EC;
-  --neutral-50: #F0F4F8;
+  --neutral-500: #627d98;
+  --neutral-400: #829ab1;
+  --neutral-300: #9fb3c8;
+  --neutral-200: #bcccdc;
+  --neutral-100: #d9e2ec;
+  --neutral-50: #f0f4f8;
 
-  --supporting-900: #19216C;
-  --supporting-800: #2D3A8C;
-  --supporting-700: #35469C;
-  --supporting-600: #4055A8;
-  --supporting-500: #4C63B6;
-  --supporting-400: #647ACB;
-  --supporting-300: #7B93DB;
-  --supporting-200: #98AEEB;
-  --supporting-100: #BED0F7;
-  --supporting-50: #E0E8F9;
+  --supporting-900: #19216c;
+  --supporting-800: #2d3a8c;
+  --supporting-700: #35469c;
+  --supporting-600: #4055a8;
+  --supporting-500: #4c63b6;
+  --supporting-400: #647acb;
+  --supporting-300: #7b93db;
+  --supporting-200: #98aeeb;
+  --supporting-100: #bed0f7;
+  --supporting-50: #e0e8f9;
 
   background-color: var(--neutral-100);
-
 }
